- Add support for Ubuntu 22.04 LTS on arm64 architecture.
- Update "GET SERVERPREFS" command to get persistent cache setting for Claris FileMaker Server 2023 (20.1). (Usage: "fmcsadmin get serverprefs PersistCacheEnabled")
- Update "GET SERVERPREFS" command to get persistent cache sync setting for Claris FileMaker Server 2023 (20.1). (Usage: "fmcsadmin get serverprefs SyncPersistCache")
- Modify behavior of outputting error messages for invalid parameters when using "GET SERVERPREFS" and "SET SERVERPREFS" command.
- Add support for Windows Server 2019 and Windows Server 2022.
- Tested with Claris FileMaker Server 20.3.
- Tested on macOS Sonoma 14.
- Built with Go 1.20.
- [INFO] Drop support for Claris FileMaker Server 19.3 and 19.4.
- [INFO] Drop support for Ubuntu 18.04 LTS.
- [INFO] Drop support for CentOS Linux 7.
- [INFO] Drop support for Windows 10 Version 21H2.
- [INFO] Drop support for macOS Big Sur 11.

Version: 2.1.0
Date: May 17, 2023
- Add "-i" option to specify a private key file for FileMaker Admin API PKI Authentication (requires Claris FileMaker Server 19.6.1 or later).
- Update behavior of "GET CWPCONFIG" command and "SET CWPCONFIG" command on Linux for FileMaker Server 19.6.1 or later.
- Detect an invalid configuration value when using "SET CWPCONFIG" command.
- Tested with Claris FileMaker Server 19.6.
- Tested on macOS Ventura 13.
- Fix spelling in help messages.
- Built with Go 1.19.
- [INFO] Drop support for Claris FileMaker Server 19.0, 19.1 and 19.2.
- [INFO] Drop support for macOS Catalina 10.15.
- [INFO] Drop support for Windows 10 Version 21H1.
- [BUG FIX] Fix causing unintended changes of the configuration settings for unspecified options in some cases when using "SET CWPCONFIG" command.

Version: 2.0.0
Date: June 27, 2022
- Change to the Apache License, Version 2.0.
- Support Ubuntu 20.04 LTS.
- Add "CANCEL" command to cancel the currently running backup for Claris FileMaker Server 19.5.1. (Usage: "fmcsadmin cancel backup")